--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
     "express": "^4.18.1",
     "mongoose": "^6.5.2",
     "nodemon": "^2.0.19"
+  },
+  "scripts": {
+    "start": "node index.js"
   }
 }
