--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "dependencies": {
     "argon2": "^0.28.7",
+    "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "mongoose": "^6.5.2",
-    "nodemon": "^2.0.19"
+    "node-fetch": "^3.2.10",
+    "nodemon": "^2.0.19",
+    "swagger-ui-express": "^4.5.0",
+    "unirest": "^0.6.0"
   },
   "scripts": {
     "start": "node index.js"
