--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
-    "express": "^4.18.1",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.2",
     "node-fetch": "^3.2.10",
     "nodemon": "^2.0.19",
